# impression_keeper

./: .env.default  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: auto-merge.yaml  pre-pull-request.yaml
deploy/: docker-compose.yaml
src/authentication/: admin.py  tests.py  urls.py  views.py
src/authentication/templates/: login.html
src/config/: settings.py  urls.py
src/home/: tests.py
src/home/templates/: home.html
src/static/css/: my_style.css  style.css
src/static/js/: main.js  map.js
src/static/scss/: Readme.txt
src/templates/: layouts.html
src/user_profile/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/user_profile/migrations/: 0001_initial.py  0002_alter_place_comment.py
src/user_profile/templates/: add_place.html  edit_place.html  user_profile.html
src/user_profile/tests/: factories.py  test_form.py  test_model.py  test_views.py
